--- a/styles/reset.css
+++ b/styles/reset.css
@@ -31,5 +31,43 @@ ul {
 }
 
 .nav-hero {
-    margin-top: 25px;
+    margin-top: 20px;
+    width: 80vw;
+    height: 5px;
+}
+
+.trusted {
+    width: 100%;
+    height: 90vh;
+    background-color: white;
+    padding: 0px 14%;
+}
+
+#Reasons {
+    width: 100%;
+    height: 90vh;
+    background-color: white;
+    padding: 0px 14%;
+}
+
+section.our-customers {
+    width: 100%;
+    height: 90vh;
+    background-color: white;
+    margin-top: 5%;
+}
+
+footer {
+    width: 100%;
+    height: 60vh;
+    background-color: white;
+    padding: 0px 14%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+ul {
+    list-style: none;
 }
