--- a/styles/style.css
+++ b/styles/style.css
@@ -68,7 +68,7 @@
 }
 
 .title-info-hero {
-    width: 500px;
+    width: 45vw;
 }
 
 .title-info-hero h1 {
@@ -184,8 +184,8 @@ section.different {
 }
 
 .image-different img {
-    width: 350px;
-    height: 480px;
+    width: 22vw;
+    height: 65vh;
     border-radius: 10px;
 }
 
@@ -225,7 +225,7 @@ section.different {
 
 section.featured {
     width: 100%;
-    height: 80%;
+    height: 100vh;
 }
 
 .content-featured {
@@ -256,7 +256,7 @@ section.featured {
     justify-content: center;
     align-items: center;
     margin-top: 30px;
-    gap: 60px;
+    gap: 80px;
 }
 
 .cards-info {
@@ -292,7 +292,7 @@ section.featured {
     background-color: #ffffff;
     color: black;
     box-shadow: 0 0 30px 1px black;
-    width: 85%;
+    width: 90%;
     padding: 5px 10px;
 }
 
@@ -325,9 +325,398 @@ section.featured {
 .icon-card {
     display: flex;
     justify-content: space-between;
+    gap: 10px;
 }
 
 .icon-card-info {
     display: flex;
     gap: 5px;
+    align-items: center;
+}
+
+.icon-card-info h4 {
+    font-weight: 300;
+    font-size: 0.8em;
+}
+
+.icon-card-info .i i {
+    font-size: 0.9em;
+    color: #353636;
+}
+
+/* SECTION TRUSTED */
+
+
+.content-trusted {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    gap: 10%;
+    align-items: center;
+    margin: auto;
+}
+
+.info-trusted h2 {
+    font-size: 2.3em;
+    margin-bottom: 20px;
+    width: 90%;
+}
+
+.info-trusted p {
+    color: rgb(20, 20, 20);
+    line-height: 25px;
+    font-weight: 100;
+    margin-bottom: 30px;
+    width: 100%;
+}
+
+.background-trusted {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.imagenes-trusted {
+    width: 100%;
+    height: 80%;
+    gap: 40px;
+    display: flex;
+    align-items: flex-end;
+}
+.image1-trusted {
+    background-image: url(https://images.unsplash.com/photo-1534240724593-cfacb25cf6ad?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=389&q=80);
+    background-size: cover;
+    background-position: center;
+    width: 10vw;
+    height: 75%;
+    border-radius: 10px;
+    display: flex;
+    align-items: flex-end;
+}
+
+.image2-trusted {
+    background-image: url(https://images.unsplash.com/photo-1560840067-ddcaeb7831d2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=479&q=80);
+    background-position: center;
+    background-size: cover;
+    width: 19vw;
+    height: 100%;
+    transform: scaleX(-1);
+    border-radius: 10px;
+}
+
+.info-trusted button {
+    padding: 8px 20px;
+    background-color: blue;
+    color: white;
+    width: 120px;
+    height: 50px;
+    border: none;
+}
+
+.content-reasons {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    gap: 10%;
+    align-items: center;
+    margin: auto;
+}
+
+.background-reasons {
+    border-radius: 10px;
+    width: 100%;
+    height: 80%;
+    background-image: url(https://images.unsplash.com/photo-1562531887-5ada5b699062?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    transform: scaleX(-1);
+}
+
+.info-reasons h2{
+    font-size: 2.3em;
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+.info-reasons p {
+    color: rgb(20, 20, 20);
+    line-height: 25px;
+    font-weight: 100;
+    margin-bottom: 30px;
+    width: 100%;
+}
+.mini-menu-reasons {
+    width: 100%;
+}
+
+.reasons {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    gap: 10px;
+    align-items: flex-start;
+}
+
+/* Customers*/
+
+.content-customers {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.tittle-section-customers {
+    background-color: white;
+    width: 100%;
+    text-align: center;
+}
+
+.tittle-section-customers h2 {
+    font-size: 2.3em;
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+.tittle-section-customers p {
+    color: rgb(20, 20, 20);
+    line-height: 25px;
+    font-weight: 100;
+    margin-bottom: 30px;
+    width: 30%;
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+.background-customers {
+    background-color: #050227;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 14%;
+    gap: 3%;
+}
+
+.div-photo-1 {
+    background-image: url(https://s36496.pcdn.co/wp-content/uploads/2017/11/9-si-foto-cv.png);
+    background-position: center;
+    background-size: cover;
+    width: 30%;
+    height: 30%;
+    border-radius: 100%;
+    position: relative;
+    bottom: 15%;
+}
+
+.div-photo-2 {
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFnP7K4Cy_GnWsuTg293WipJ7WwkWc9DxBnXSdWNHvjyoYbqYGVm75V7QlVBKYt4-oo4U&usqp=CAU);
+    background-position: center;
+    background-size: cover;
+    width: 30%;
+    height: 30%;
+    border-radius: 100%;
+    position: relative;
+    bottom: 15%;
+    border: 5px solid white;
+}
+
+.div-photo-3 {
+    background-image: url(https://yt3.ggpht.com/ytc/AMLnZu8YDMAFxw82UY4GEo1v54i61nnkqLHxkc9Y8dryANU=s900-c-k-c0x00ffffff-no-rj);
+    background-position: center center;
+    background-size: cover;
+    width: 30%;
+    height: 30%;
+    border-radius: 100%;
+    position: relative;
+    bottom: 15%;
+}
+
+.content-card-customer {
+    position: relative;
+    bottom: 15%;
+}
+.card-customers {
+    border: 2px solid white;
+    color: white;
+    border-radius: 20px;
+    height: 70%;
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 20px;
+}
+
+.card-customers:nth-child(2) {
+    background-color: white;
+    color: black;
+    border: 4px solid white;
+}
+
+.content-card-customer {
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+}
+
+.i-customer * i {
+    display: flex;
+}
+.i-comilla {
+    font-size: 2em;
+}
+
+.content-footer {
+    margin: auto;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo-footer {
+    display: flex;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+.content-logo-socialmedia {
+    width: 80%;
+}
+
+.content-logo-socialmedia p {
+    line-height: 25px;
+    font-weight: 500;
+    margin-bottom: 30px;
+}
+
+.logo-footer h1 {
+    font-size: 1.7em;
+    font-weight: 700;
+}
+.logo-footer .i i {
+    font-size: 2em;
+    color: blue;
+}
+
+.logo-socialmedia {
+    width: 33.33%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+
+}
+
+button.brand-logo {
+    width: 13%;
+    height: 13%;
+    color: white;
+    background-color: black;
+    border: none;
+}
+
+.brand-logo .i i {
+    font-size: 3em;
+}
+
+.socialmedia {
+    height: 20%;
+    display: flex;  
+    gap: 20px;
+}
+
+.icon-social {
+    background-color: black;
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon-social .i i {
+    color: white;
+    font-size: 30px;
+
+}
+
+.about-us {
+    width: 16.665%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+}
+
+.support {
+    width: 16.665%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: start;
+}
+
+.contact {
+    width: 33.33%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-start;
+}
+
+.content-contact ul li {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 15px;
+}
+
+.support h2 {
+    font-size: 1.6em;
+    margin-bottom: 25px;
+}
+
+.contact h2 {
+    font-size: 1.6em;
+    margin-bottom: 25px;
+}
+
+.about-us h2{
+    font-size: 1.6em;
+    margin-bottom: 25px;
+}
+
+.about-us li{
+    font-size: 1.1em;
+    margin-bottom: 15px;
+}
+
+.support li {
+    font-size: 1.1em;
+    margin-bottom: 15px;
+}
+
+.copy {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 5%;
+}
+
+.copy h4 {
+    font-size: 1em;
+    font-weight: 100;
 }
